// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph_getPaths 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "foo",
      },
    },
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "bar",
      },
    },
  ],
  "node": {
    "id": "target",
  },
}
`;

exports[`graph_getPaths 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "node": {
            "id": "baz",
          },
        },
      ],
      "node": {
        "id": "foo",
      },
    },
  ],
  "node": {
    "id": "target",
  },
}
`;
